# Slurm_DataLocality

./: .gitignore  configure  configure.ac
slurm/: slurm.h  slurm_errno.h  slurmdb.h
src/api/: config_info.c  job_info.c
src/common/: read_config.c  slurm_errno.c  slurm_opt.c  slurm_opt.h  slurm_protocol_defs.c  slurm_protocol_pack.c  slurmdb_defs.c  slurmdb_pack.c  slurmdbd_defs.c  slurmdbd_defs.h  slurmdbd_pack.c  state_control.c
src/interfaces/: select.c
src/lua/: slurm_lua.c
src/plugins/accounting_storage/mysql/: accounting_storage_mysql.c  as_mysql_archive.c  as_mysql_job.c  as_mysql_jobacct_process.c
src/plugins/accounting_storage/slurmdbd/: accounting_storage_slurmdbd.c
src/plugins/data_parser/v0.0.39/: parsers.c
src/plugins/job_submit/lua/: job_submit_lua.c
src/plugins/openapi/dbv0.0.37/: parse.c
src/plugins/openapi/dbv0.0.38/: parse.c
src/plugins/select/: Makefile.am
src/plugins/select/cons_common/: cons_common.c  cons_common.h  job_test.c
src/plugins/select/cons_res/: job_test.c  job_test.h
src/plugins/select/cons_tres/: job_test.c  (+1 more)
src/plugins/select/cons_tres_locality/: Makefile.am  Makefile.in  alluxio.c  alluxio.h  dist_tasks.c  dist_tasks.h  gres_sched.h  job_test.c  job_test.h  select_cons_tres_locality.c  select_cons_tres_locality.h
src/sacct/: print.c  sacct.c  sacct.h
src/sacctmgr/: job_functions.c
src/sbatch/: opt.c
src/scontrol/: update_job.c
src/scrontab/: opt.c
src/slurmctld/: job_mgr.c  slurmctld.h
src/slurmd/slurmd/: slurmd.c
src/slurmdbd/: proc_req.c
src/srun/: opt.c
src/sview/: job_info.c
